changes from client

--- a/about.html
+++ b/about.html
@@ -116,13 +116,11 @@
             <div class="container">
                 <div class="main-responsive-menu">
                     <div class="logo">
-                        <a style="
-									color: #BF40BF;
-									font-size: 1.4rem;
-									font-weight: 500;
-								" class="navbar-brand" href="index.html">
-                            CHILDDR
-                        </a>
+                        <!-- <a style="color: #bf40bf; font-size: 1.4rem; font-weight: 500;" class="navbar-brand"
+							href="index.html">
+							CHILDDR
+						</a> -->
+                        <img src="assets/img/logoimage.png" width="60%" alt="image" />
                     </div>
                 </div>
             </div>
@@ -132,13 +130,7 @@
             <div class="navbar-inner">
                 <div class="container">
                     <nav class="navbar navbar-expand-md">
-                        <a style="
-									color: #BF40BF;
-									font-size: 1.4rem;
-									font-weight: 900;
-								" class="navbar-brand" href="index.html">
-                            CHILDDR
-                        </a>
+                        <img src="assets/img/logoimage.png" width="5%" height="5%" alt="image" />
                         <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
                             <ul class="navbar-nav m-auto">
                                 <li class="nav-item">
@@ -167,7 +159,7 @@
                                 </li>
                                 <li class="nav-item">
                                     <a href="terms-of-service.html" class="nav-link">
-                                        Term&#38Condition
+                                        Term &amp; Condition
                                     </a>
                                 </li>
                                 <li class="nav-item">
@@ -181,23 +173,21 @@
                                         <div class="others-options d-flex align-items-center">
                                             <div class="call-icon option-item">
                                                 <i class="fab fa-whatsapp" style="
-															color: #BF40BF;
-															font-size: 2rem;
-															padding-right: 10px;
-															font-weight: 500;
-														"></i>
+                              color: #bf40bf;
+                              font-size: 2rem;
+                              padding-right: 10px;
+                              font-weight: 500;
+                            "></i>
                                             </div>
                                             <div class="icon-box icon-box-body">
-                                                <a style="
-															padding-top: 0px;
-															padding-bottom: 0px;
-														" target="_blank" href="https://wa.me/15550852750?text=Hello">
+                                                <a style="padding-top: 0px; padding-bottom: 0px;" target="_blank"
+                                                    href="https://wa.me/15550852750?text=Hello">
                                                     <span class="title" style="
-																color: #BF40BF;
-																font-size: 1rem;
-																font-weight: 500;
-															">
-                                                        Consult With Doctor
+                                color: #bf40bf;
+                                font-size: 1rem;
+                                font-weight: 500;
+                              ">
+                                                        We are available via WhatsApp only..!
                                                         <p>
                                                             (555)-085-2750
                                                         </p>
@@ -323,39 +313,16 @@
 
                 <div class="col-lg-6">
                     <div class="about-content">
-                        <h3>We are Trusted The Best Certificate Healthcare Specialist</h3>
+                        <h3>Online Consultation with Specialist Healthcare Professionals</h3>
                         <div class="bar"></div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                            voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                        <p>Do you want to get the best health care for your mother and child without leaving your home?
+                            Mother Child Telemedicine is the ideal solution for you. We offer online consultation with
+                            specialist healthcare professionals who have expertise in various fields, such as
+                            gynecology, pediatrics, nutrition, psychology, and more. You can schedule an appointment,
+                            talk to the doctor, get prescriptions, and access your medical records anytime, anywhere.
+                            Mother Child Telemedicine is reliable, convenient, and affordable.</p>
 
-                        <ul class="about-list">
-                            <li>
-                                <i class="flaticon-checked"></i>
-                                A Good Environment For Work
-                            </li>
 
-                            <li>
-                                <i class="flaticon-checked"></i>
-                                Digital Laboratory
-                            </li>
-
-                            <li>
-                                <i class="flaticon-checked"></i>
-                                Emergency Services
-                            </li>
-
-                            <li>
-                                <i class="flaticon-checked"></i>
-                                Professional Doctors
-                            </li>
-
-                            <li>
-                                <i class="flaticon-checked"></i>
-                                Scientific skills For Getting A Better Result
-                            </li>
-                        </ul>
 
                         <!-- <div class="about-btn">
                             <a href="about.html" class="default-btn">More About Us</a>
@@ -415,20 +382,24 @@
     <section class="team-area pt-100 pb-70">
         <div class="container">
             <div class="section-title">
-                <h2>Specialized Doctors</h2>
+                <h2>Meet Our Team of Specialist Healthcare Professionals</h2>
                 <div class="bar"></div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua ut enim ad minim veniam, quis nostrud exercitation ullamco labor.</p>
+                <p>Do you want to know more about the team of specialist healthcare professionals who provide online
+                    consultation ? Our platform is the place to go. We have a team of qualified and experienced doctors
+                    who specialize in various fields, such as gynecology, pediatrics, nutrition, psychology, and more.
+                    You can view their profiles, credentials, ratings, and reviews on our website. You can also book an
+                    appointment, chat with them, get prescriptions, and access your medical records anytime, anywhere.
+                </p>
             </div>
 
             <div class="row">
                 <div class="col-lg-3 col-sm-6">
                     <div class="team-card">
-                        <a href="doctors-details.html"><img src="assets/img/team/team-1.jpg" alt="Image"></a>
+                        <a href="#"><img src="assets/img/team/team-1.jpg" alt="Image"></a>
 
                         <div class="content">
                             <h3>
-                                <a href="doctors-details.html">Dr. James Adult</a>
+                                <a href="#">Dr. James Adult</a>
                             </h3>
                             <span>Cardiologist</span>
 
@@ -460,11 +431,11 @@
 
                 <div class="col-lg-3 col-sm-6">
                     <div class="team-card">
-                        <a href="doctors-details.html"><img src="assets/img/team/team-2.jpg" alt="Image"></a>
+                        <a href="#"><img src="assets/img/team/team-2.jpg" alt="Image"></a>
 
                         <div class="content">
                             <h3>
-                                <a href="doctors-details.html">Dr. James Alison</a>
+                                <a href="#">Dr. James Alison</a>
                             </h3>
                             <span>Medicine</span>
 
@@ -496,11 +467,11 @@
 
                 <div class="col-lg-3 col-sm-6">
                     <div class="team-card">
-                        <a href="doctors-details.html"><img src="assets/img/team/team-3.jpg" alt="Image"></a>
+                        <a href="#"><img src="assets/img/team/team-3.jpg" alt="Image"></a>
 
                         <div class="content">
                             <h3>
-                                <a href="doctors-details.html">Dr. Peter Adlock</a>
+                                <a href="#">Dr. Peter Adlock</a>
                             </h3>
                             <span>Neurologist</span>
 
@@ -532,11 +503,11 @@
 
                 <div class="col-lg-3 col-sm-6">
                     <div class="team-card">
-                        <a href="doctors-details.html"><img src="assets/img/team/team-4.jpg" alt="Image"></a>
+                        <a href="#"><img src="assets/img/team/team-4.jpg" alt="Image"></a>
 
                         <div class="content">
                             <h3>
-                                <a href="doctors-details.html">Dr. Jelin Alis</a>
+                                <a href="#">Dr. Jelin Alis</a>
                             </h3>
                             <span>Dermatology</span>
 
@@ -967,7 +938,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-sm-6">
+                <!-- <div class="col-lg-3 col-sm-6">
                     <div class="single-footer-widget">
                         <h2>Get In Touch</h2>
 
@@ -991,7 +962,7 @@
                             </li>
                         </ul>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
