--- a/doctors.html
+++ b/doctors.html
@@ -116,13 +116,11 @@
             <div class="container">
                 <div class="main-responsive-menu">
                     <div class="logo">
-                        <a style="
-									color: #BF40BF;
-									font-size: 1.4rem;
-									font-weight: 500;
-								" class="navbar-brand" href="index.html">
-                            CHILDDR
-                        </a>
+                        <!-- <a style="color: #bf40bf; font-size: 1.4rem; font-weight: 500;" class="navbar-brand"
+							href="index.html">
+							CHILDDR
+						</a> -->
+                        <img src="assets/img/logoimage.png" width="60%" alt="image" />
                     </div>
                 </div>
             </div>
@@ -132,13 +130,7 @@
             <div class="navbar-inner">
                 <div class="container">
                     <nav class="navbar navbar-expand-md">
-                        <a style="
-									color: #BF40BF;
-									font-size: 1.4rem;
-									font-weight: 900;
-								" class="navbar-brand" href="index.html">
-                            CHILDDR
-                        </a>
+                        <img src="assets/img/logoimage.png" width="5%" height="5%" alt="image" />
                         <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
                             <ul class="navbar-nav m-auto">
                                 <li class="nav-item">
@@ -167,7 +159,7 @@
                                 </li>
                                 <li class="nav-item">
                                     <a href="terms-of-service.html" class="nav-link">
-                                        Term&#38Condition
+                                        Term &amp; Condition
                                     </a>
                                 </li>
                                 <li class="nav-item">
@@ -181,23 +173,21 @@
                                         <div class="others-options d-flex align-items-center">
                                             <div class="call-icon option-item">
                                                 <i class="fab fa-whatsapp" style="
-															color: #BF40BF;
-															font-size: 2rem;
-															padding-right: 10px;
-															font-weight: 500;
-														"></i>
+                              color: #bf40bf;
+                              font-size: 2rem;
+                              padding-right: 10px;
+                              font-weight: 500;
+                            "></i>
                                             </div>
                                             <div class="icon-box icon-box-body">
-                                                <a style="
-															padding-top: 0px;
-															padding-bottom: 0px;
-														" target="_blank" href="https://wa.me/15550852750?text=Hello">
+                                                <a style="padding-top: 0px; padding-bottom: 0px;" target="_blank"
+                                                    href="https://wa.me/15550852750?text=Hello">
                                                     <span class="title" style="
-																color: #BF40BF;
-																font-size: 1rem;
-																font-weight: 500;
-															">
-                                                        Consult With Doctor
+                                color: #bf40bf;
+                                font-size: 1rem;
+                                font-weight: 500;
+                              ">
+                                                        We are available via WhatsApp only..!
                                                         <p>
                                                             (555)-085-2750
                                                         </p>
@@ -307,24 +297,25 @@
     <section class="team-area pt-100 pb-100">
         <div class="container">
             <div class="section-title">
-                <h2>Specialized Doctors</h2>
+                <h2>Meet Our Team of Specialist Healthcare Professionals</h2>
                 <div class="bar"></div>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                    sed do eiusmod tempor incididunt ut labore et dolore
-                    magna aliqua ut enim ad minim veniam, quis nostrud
-                    exercitation ullamco labor.
+                    Do you want to know more about the team of specialist healthcare professionals who provide online
+                    consultation ? Our platform is the place to go. We have a team of qualified and experienced doctors
+                    who specialize in various fields, such as gynecology, pediatrics, nutrition, psychology, and more.
+                    You can view their profiles, credentials, ratings, and reviews on our website. You can also book an
+                    appointment, chat with them, get prescriptions, and access your medical records anytime, anywhere.
                 </p>
             </div>
 
             <div class="row">
                 <div class="col-lg-4 col-sm-6">
                     <div class="team-card">
-                        <a href="doctors-details.html"><img src="assets/img/team/team-1.jpg" alt="Image" /></a>
+                        <a href="#"><img src="assets/img/team/team-1.jpg" alt="Image" /></a>
 
                         <div class="content">
                             <h3>
-                                <a href="doctors-details.html">Dr. James Adult</a>
+                                <a href="#">Dr. James Adult</a>
                             </h3>
                             <span>Cardiologist</span>
 
@@ -356,11 +347,11 @@
 
                 <div class="col-lg-4 col-sm-6">
                     <div class="team-card">
-                        <a href="doctors-details.html"><img src="assets/img/team/team-3.jpg" alt="Image" /></a>
+                        <a href="#"><img src="assets/img/team/team-3.jpg" alt="Image" /></a>
 
                         <div class="content">
                             <h3>
-                                <a href="doctors-details.html">Dr. James Alison</a>
+                                <a href="#">Dr. James Alison</a>
                             </h3>
                             <span>Medicine</span>
 
@@ -392,11 +383,11 @@
 
                 <div class="col-lg-4 col-sm-6">
                     <div class="team-card">
-                        <a href="doctors-details.html"><img src="assets/img/team/team-2.jpg" alt="Image" /></a>
+                        <a href="#"><img src="assets/img/team/team-2.jpg" alt="Image" /></a>
 
                         <div class="content">
                             <h3>
-                                <a href="doctors-details.html">Dr. Peter Adlock</a>
+                                <a href="#">Dr. Peter Adlock</a>
                             </h3>
                             <span>Neurologist</span>
 
@@ -428,11 +419,11 @@
 
                 <div class="col-lg-4 col-sm-6">
                     <div class="team-card">
-                        <a href="doctors-details.html"><img src="assets/img/team/team-4.jpg" alt="Image" /></a>
+                        <a href="#"><img src="assets/img/team/team-4.jpg" alt="Image" /></a>
 
                         <div class="content">
                             <h3>
-                                <a href="doctors-details.html">Dr. Jelin Alis</a>
+                                <a href="#">Dr. Jelin Alis</a>
                             </h3>
                             <span>Dermatology</span>
 
@@ -464,11 +455,11 @@
 
                 <div class="col-lg-4 col-sm-6">
                     <div class="team-card">
-                        <a href="doctors-details.html"><img src="assets/img/team/team-5.jpg" alt="Image" /></a>
+                        <a href="#"><img src="assets/img/team/team-5.jpg" alt="Image" /></a>
 
                         <div class="content">
                             <h3>
-                                <a href="doctors-details.html">Dr. Daniel Peter</a>
+                                <a href="#">Dr. Daniel Peter</a>
                             </h3>
                             <span>Orthopedic</span>
 
@@ -500,11 +491,11 @@
 
                 <div class="col-lg-4 col-sm-6">
                     <div class="team-card">
-                        <a href="doctors-details.html"><img src="assets/img/team/team-6.jpg" alt="Image" /></a>
+                        <a href="#"><img src="assets/img/team/team-6.jpg" alt="Image" /></a>
 
                         <div class="content">
                             <h3>
-                                <a href="doctors-details.html">Dr. Mark</a>
+                                <a href="#">Dr. Mark</a>
                             </h3>
                             <span>Neurology</span>
 
@@ -601,7 +592,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-sm-6">
+                <!-- <div class="col-lg-3 col-sm-6">
                     <div class="single-footer-widget">
                         <h2>Get In Touch</h2>
 
@@ -625,7 +616,7 @@
                             </li>
                         </ul>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
