--- a/services.html
+++ b/services.html
@@ -241,13 +241,11 @@
             <div class="container">
                 <div class="main-responsive-menu">
                     <div class="logo">
-                        <a style="
-									color: #BF40BF;
-									font-size: 1.4rem;
-									font-weight: 500;
-								" class="navbar-brand" href="index.html">
-                            CHILDDR
-                        </a>
+                        <!-- <a style="color: #bf40bf; font-size: 1.4rem; font-weight: 500;" class="navbar-brand"
+							href="index.html">
+							CHILDDR
+						</a> -->
+                        <img src="assets/img/logoimage.png" width="60%" alt="image" />
                     </div>
                 </div>
             </div>
@@ -257,13 +255,7 @@
             <div class="navbar-inner">
                 <div class="container">
                     <nav class="navbar navbar-expand-md">
-                        <a style="
-									color: #BF40BF;
-									font-size: 1.4rem;
-									font-weight: 900;
-								" class="navbar-brand" href="index.html">
-                            CHILDDR
-                        </a>
+                        <img src="assets/img/logoimage.png" width="5%" height="5%" alt="image" />
                         <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
                             <ul class="navbar-nav m-auto">
                                 <li class="nav-item">
@@ -292,7 +284,7 @@
                                 </li>
                                 <li class="nav-item">
                                     <a href="terms-of-service.html" class="nav-link">
-                                        Term &#38 Condition
+                                        Term &amp; Condition
                                     </a>
                                 </li>
                                 <li class="nav-item">
@@ -306,23 +298,21 @@
                                         <div class="others-options d-flex align-items-center">
                                             <div class="call-icon option-item">
                                                 <i class="fab fa-whatsapp" style="
-															color: #BF40BF;
-															font-size: 2rem;
-															padding-right: 10px;
-															font-weight: 500;
-														"></i>
+                              color: #bf40bf;
+                              font-size: 2rem;
+                              padding-right: 10px;
+                              font-weight: 500;
+                            "></i>
                                             </div>
                                             <div class="icon-box icon-box-body">
-                                                <a style="
-															padding-top: 0px;
-															padding-bottom: 0px;
-														" target="_blank" href="https://wa.me/15550852750?text=Hello">
+                                                <a style="padding-top: 0px; padding-bottom: 0px;" target="_blank"
+                                                    href="https://wa.me/15550852750?text=Hello">
                                                     <span class="title" style="
-																color: #BF40BF;
-																font-size: 1rem;
-																font-weight: 500;
-															">
-                                                        Consult With Doctor
+                                color: #bf40bf;
+                                font-size: 1rem;
+                                font-weight: 500;
+                              ">
+                                                        We are available via WhatsApp only..!
                                                         <p>
                                                             (555)-085-2750
                                                         </p>
@@ -441,13 +431,12 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="single-services">
                         <div class="services-image">
-                            <a href="services-details.html"><img src="assets/img/services/services-1.jpg"
-                                    alt="image"></a>
+                            <a href="#"><img src="assets/img/services/services-1.jpg" alt="image"></a>
                         </div>
 
                         <div class="services-content">
                             <h3>
-                                <a href="services-details.html">Dental Services</a>
+                                <a href="#">Dental Services</a>
                             </h3>
                             <p>Give your child a reason to smile with our kids' dental services. Our friendly team
                                 ensures gentle and fun dental care, creating bright, healthy smiles that last a lifetime
@@ -459,13 +448,12 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="single-services">
                         <div class="services-image">
-                            <a href="services-details.html"><img src="assets/img/services/services-2.jpg"
-                                    alt="image"></a>
+                            <a href="#"><img src="assets/img/services/services-2.jpg" alt="image"></a>
                         </div>
 
                         <div class="services-content">
                             <h3>
-                                <a href="services-details.html">Endocrinology</a>
+                                <a href="#">Endocrinology</a>
                             </h3>
                             <p>Pediatric endocrinologists are like superheroes for kids' hormones! They're doctors who
                                 help when hormones misbehave, like in diabetes or growth problems. They use their
@@ -478,13 +466,12 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="single-services">
                         <div class="services-image">
-                            <a href="services-details.html"><img src="assets/img/services/services-3.jpg"
-                                    alt="image"></a>
+                            <a href="#"><img src="assets/img/services/services-3.jpg" alt="image"></a>
                         </div>
 
                         <div class="services-content">
                             <h3>
-                                <a href="services-details.html">Gastroenterology</a>
+                                <a href="#">Gastroenterology</a>
                             </h3>
                             <p>Gastroenterology doctors are like detectives for our tummies! They help when our
                                 stomachs, intestines, or liver have trouble. They use special tools and tests to solve
@@ -497,13 +484,12 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="single-services">
                         <div class="services-image">
-                            <a href="services-details.html"><img src="assets/img/services/services-4.jpg"
-                                    alt="image"></a>
+                            <a href="#"><img src="assets/img/services/services-4.jpg" alt="image"></a>
                         </div>
 
                         <div class="services-content">
                             <h3>
-                                <a href="services-details.html">Chemical Research</a>
+                                <a href="#">Chemical Research</a>
                             </h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                                 ut labore et dolore magna aliqua.</p>
@@ -514,13 +500,12 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="single-services">
                         <div class="services-image">
-                            <a href="services-details.html"><img src="assets/img/services/services-5.jpg"
-                                    alt="image"></a>
+                            <a href="#"><img src="assets/img/services/services-5.jpg" alt="image"></a>
                         </div>
 
                         <div class="services-content">
                             <h3>
-                                <a href="services-details.html">Anatomical Pathology</a>
+                                <a href="#">Anatomical Pathology</a>
                             </h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                                 ut labore et dolore magna aliqua.</p>
@@ -531,13 +516,12 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="single-services">
                         <div class="services-image">
-                            <a href="services-details.html"><img src="assets/img/services/services-6.jpg"
-                                    alt="image"></a>
+                            <a href="#"><img src="assets/img/services/services-6.jpg" alt="image"></a>
                         </div>
 
                         <div class="services-content">
                             <h3>
-                                <a href="services-details.html">Heart Disease</a>
+                                <a href="#">Heart Disease</a>
                             </h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                                 ut labore et dolore magna aliqua.</p>
@@ -595,7 +579,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-sm-6">
+                <!-- <div class="col-lg-3 col-sm-6">
                     <div class="single-footer-widget">
                         <h2>Get In Touch</h2>
 
@@ -619,7 +603,7 @@
                             </li>
                         </ul>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
