--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -241,13 +241,11 @@
             <div class="container">
                 <div class="main-responsive-menu">
                     <div class="logo">
-                        <a style="
-									color: #BF40BF;
-									font-size: 1.4rem;
-									font-weight: 500;
-								" class="navbar-brand" href="index.html">
-                            CHILDDR
-                        </a>
+                        <!-- <a style="color: #bf40bf; font-size: 1.4rem; font-weight: 500;" class="navbar-brand"
+							href="index.html">
+							CHILDDR
+						</a> -->
+                        <img src="assets/img/logoimage.png" width="60%" alt="image" />
                     </div>
                 </div>
             </div>
@@ -257,13 +255,7 @@
             <div class="navbar-inner">
                 <div class="container">
                     <nav class="navbar navbar-expand-md">
-                        <a style="
-									color: #BF40BF;
-									font-size: 1.4rem;
-									font-weight: 900;
-								" class="navbar-brand" href="index.html">
-                            CHILDDR
-                        </a>
+                        <img src="assets/img/logoimage.png" width="5%" height="5%" alt="image" />
                         <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
                             <ul class="navbar-nav m-auto">
                                 <li class="nav-item">
@@ -292,7 +284,7 @@
                                 </li>
                                 <li class="nav-item">
                                     <a href="terms-of-service.html" class="nav-link">
-                                        Term &#38 Condition
+                                        Term &amp; Condition
                                     </a>
                                 </li>
                                 <li class="nav-item">
@@ -306,23 +298,21 @@
                                         <div class="others-options d-flex align-items-center">
                                             <div class="call-icon option-item">
                                                 <i class="fab fa-whatsapp" style="
-															color: #BF40BF;
-															font-size: 2rem;
-															padding-right: 10px;
-															font-weight: 500;
-														"></i>
+                              color: #bf40bf;
+                              font-size: 2rem;
+                              padding-right: 10px;
+                              font-weight: 500;
+                            "></i>
                                             </div>
                                             <div class="icon-box icon-box-body">
-                                                <a style="
-															padding-top: 0px;
-															padding-bottom: 0px;
-														" target="_blank" href="https://wa.me/15550852750?text=Hello">
+                                                <a style="padding-top: 0px; padding-bottom: 0px;" target="_blank"
+                                                    href="https://wa.me/15550852750?text=Hello">
                                                     <span class="title" style="
-																color: #BF40BF;
-																font-size: 1rem;
-																font-weight: 500;
-															">
-                                                        Consult With Doctor
+                                color: #bf40bf;
+                                font-size: 1rem;
+                                font-weight: 500;
+                              ">
+                                                        We are available via WhatsApp only..!
                                                         <p>
                                                             (555)-085-2750
                                                         </p>
@@ -440,56 +430,99 @@
                     <li class="accordion-item">
                         <a class="accordion-title active" href="javascript:void(0)">
                             <i class='bx bx-plus'></i>
-                            How Do I Contact Customer Services?
+                            What is a WhatsApp based mother child health telemedicine platform?
                         </a>
 
                         <p class="accordion-content show">
-                            Check the Contact page. Navigate from Header menu.
+                            A WhatsApp based mother child health telemedicine platform is a service that allows pregnant
+                            women and mothers of young children to access health information, advice, and care from
+                            qualified doctors and health workers through WhatsApp messages, voice calls, or video calls.
                         </p>
                     </li>
 
                     <li class="accordion-item">
                         <a class="accordion-title" href="javascript:void(0)">
                             <i class='bx bx-plus'></i>
-                            Do Doctor Pay For Good Reviews?
+                            What are the benefits of using a WhatsApp based mother child health telemedicine platform?
                         </a>
 
                         <p class="accordion-content">
-                            Not at all, We do not pay any money for reviews.
+                            Some of the benefits of using a WhatsApp based mother child health telemedicine platform
+                            are:
+                            <br>
+                            - It is convenient, as you can consult a doctor or health worker anytime and anywhere,
+                            without having to travel or wait in long queues.
+                            <br>
+                            - It is affordable, as you can save on transportation and consultation fees, and also get
+                            discounts on medicines and tests if prescribed by the doctor or health worker.
+                            <br>
+                            - It is confidential, as you can share your personal and medical details with the doctor or
+                            health worker without any fear of stigma or discrimination.
+                            <br>
+                            - It is reliable, as you can get accurate and timely information and guidance from qualified
+                            and experienced doctors and health workers.
                         </p>
                     </li>
 
                     <li class="accordion-item">
                         <a class="accordion-title" href="javascript:void(0)">
                             <i class='bx bx-plus'></i>
-                            Does has Healthcare Mobile App
+                            How can I access a WhatsApp based mother child health telemedicine platform?
                         </a>
 
                         <p class="accordion-content">
-                            No as of now we serve on web application as well as whatsapp, soon we will update you.
+                            To access a WhatsApp based mother child health telemedicine platform, you need to have a
+                            smartphone with WhatsApp installed and an active internet connection. You also need to
+                            register with the platform by providing your name, phone number, location, and other
+                            relevant details. Once you register, you will receive a welcome message with instructions on
+                            how to use the service. You can then start sending your queries or requests to the
+                            platform's WhatsApp number, and you will receive a response from a doctor or health worker
+                            within a few minutes.
                         </p>
                     </li>
 
                     <li class="accordion-item">
                         <a class="accordion-title" href="javascript:void(0)">
                             <i class='bx bx-plus'></i>
-                            How Patient Can Consult With online Doctor?
+                            What kind of services can I get from a WhatsApp based mother child health telemedicine
+                            platform?
                         </a>
 
                         <p class="accordion-content">
-                            Just click on Consult with doctor from header. You will be redirected to whatsapp. Now
-                            follow the process.
+                            A WhatsApp based mother child health telemedicine platform can provide you with various
+                            services related to your pregnancy and child care, such as:
+
+                            - Antenatal care: You can get information and advice on how to take care of yourself and
+                            your baby during pregnancy, such as nutrition, exercise, immunization, supplements, tests,
+                            etc. You can also get reminders for your antenatal check-ups and appointments.
+                            <br>
+                            - Postnatal care: You can get information and advice on how to take care of yourself and
+                            your baby after delivery, such as breastfeeding, nutrition, hygiene, family planning,
+                            immunization, etc. You can also get support for any postpartum complications or issues.
+                            <br>
+                            - Child care: You can get information and advice on how to take care of your child's health
+                            and development, such as nutrition, growth, immunization, milestones, common illnesses, etc.
+                            You can also get referrals for specialized care if needed.
+                            <br>
+                            - Emergency care: You can get immediate assistance and guidance in case of any emergency or
+                            complication related to your pregnancy or child's health, such as bleeding, pain, fever,
+                            infection, etc. You can also get directions to the nearest hospital or health facility if
+                            required.
                         </p>
                     </li>
 
                     <li class="accordion-item">
                         <a class="accordion-title" href="javascript:void(0)">
                             <i class='bx bx-plus'></i>
-                            Does Has a Privacy Policy?
+                            Is a WhatsApp based mother child health telemedicine platform safe and secure?
                         </a>
 
                         <p class="accordion-content">
-                            Yes you can find the PDF from DOWNLOAD T&C button. Every customer adviced to read it first.
+                            Yes, a WhatsApp based mother child health telemedicine platform is safe and secure. All your
+                            personal and medical data are encrypted and stored in a secure server. Only authorized
+                            doctors and health workers can access your data. Your conversations with the doctor or
+                            health worker are also confidential and protected by WhatsApp's end-to-end encryption. You
+                            can also delete your messages or data from the platform at any time if you wish.
                         </p>
                     </li>
 
@@ -500,7 +533,7 @@
                         </a>
 
                         <p class="accordion-content">
-                            No, Since it is fast and easy process to consult with your doctor. try it out.
+                            No, Since it is fast and easy process to consult with your doctor by your self. try it out.
                         </p>
                     </li>
                 </ul>
@@ -655,7 +688,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-sm-6">
+                <!-- <div class="col-lg-3 col-sm-6">
                     <div class="single-footer-widget">
                         <h2>Get In Touch</h2>
 
@@ -679,7 +712,7 @@
                             </li>
                         </ul>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
