--- a/contact.html
+++ b/contact.html
@@ -241,13 +241,11 @@
             <div class="container">
                 <div class="main-responsive-menu">
                     <div class="logo">
-                        <a style="
-									color: #BF40BF;
-									font-size: 1.4rem;
-									font-weight: 500;
-								" class="navbar-brand" href="index.html">
-                            CHILDDR
-                        </a>
+                        <!-- <a style="color: #bf40bf; font-size: 1.4rem; font-weight: 500;" class="navbar-brand"
+							href="index.html">
+							CHILDDR
+						</a> -->
+                        <img src="assets/img/logoimage.png" width="60%" alt="image" />
                     </div>
                 </div>
             </div>
@@ -257,13 +255,7 @@
             <div class="navbar-inner">
                 <div class="container">
                     <nav class="navbar navbar-expand-md">
-                        <a style="
-									color: #BF40BF;
-									font-size: 1.4rem;
-									font-weight: 900;
-								" class="navbar-brand" href="index.html">
-                            CHILDDR
-                        </a>
+                        <img src="assets/img/logoimage.png" width="5%" height="5%" alt="image" />
                         <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
                             <ul class="navbar-nav m-auto">
                                 <li class="nav-item">
@@ -292,7 +284,7 @@
                                 </li>
                                 <li class="nav-item">
                                     <a href="terms-of-service.html" class="nav-link">
-                                        Term &#38 Condition
+                                        Term &amp; Condition
                                     </a>
                                 </li>
                                 <li class="nav-item">
@@ -306,23 +298,21 @@
                                         <div class="others-options d-flex align-items-center">
                                             <div class="call-icon option-item">
                                                 <i class="fab fa-whatsapp" style="
-															color: #BF40BF;
-															font-size: 2rem;
-															padding-right: 10px;
-															font-weight: 500;
-														"></i>
+                              color: #bf40bf;
+                              font-size: 2rem;
+                              padding-right: 10px;
+                              font-weight: 500;
+                            "></i>
                                             </div>
                                             <div class="icon-box icon-box-body">
-                                                <a style="
-															padding-top: 0px;
-															padding-bottom: 0px;
-														" target="_blank" href="https://wa.me/15550852750?text=Hello">
+                                                <a style="padding-top: 0px; padding-bottom: 0px;" target="_blank"
+                                                    href="https://wa.me/15550852750?text=Hello">
                                                     <span class="title" style="
-																color: #BF40BF;
-																font-size: 1rem;
-																font-weight: 500;
-															">
-                                                        Consult With Doctor
+                                color: #bf40bf;
+                                font-size: 1rem;
+                                font-weight: 500;
+                              ">
+                                                        We are available via WhatsApp only..!
                                                         <p>
                                                             (555)-085-2750
                                                         </p>
@@ -435,7 +425,7 @@
                             <i class='bx bx-envelope'></i>
                         </div>
 
-                        <h3>Email Here</h3>
+                        <h3>Email Us</h3>
                         <p><a href="/cdn-cgi/l/email-protection#dfb7bab3b3b09fb2babbb6a9bef1bcb0b2"><span
                                     class="__cf_email__"
                                     data-cfemail="9cf4f9f0f0f3dcf1f9f8f5eafdb2fff3f1">mychilddr@gmail.com</span></a>
@@ -453,7 +443,7 @@
                             <i class='bx bx-map'></i>
                         </div>
 
-                        <h3>Location Here</h3>
+                        <h3>Corporate Office</h3>
                         <p>Shri Hari Child Clinic
                             Carter road no 3
                             Yogi Darshan A/3 , makwana nagar, Near Savitribai fule hospital WEH
@@ -612,7 +602,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-sm-6">
+                <!-- <div class="col-lg-3 col-sm-6">
                     <div class="single-footer-widget">
                         <h2>Get In Touch</h2>
 
@@ -636,7 +626,7 @@
                             </li>
                         </ul>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
